--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <tbody></tbody>
     </table>
 
-    <button id="readyButton" disabled>READY!</button>
+    <button id="readyButton">READY!</button>
 
     <script>
         const maxPlayers = 7;
