--- a/game.html
+++ b/game.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-    <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
     <h1 id="turnMessage"></h1>
 
     <div class="button-container">
@@ -20,19 +19,9 @@
         <div id="countdown">20</div>
     </div>
 
-    <div id="scoreboard">
-        <table>
-            <thead>
-                <tr>
-                    <th>Position</th>
-                    <th>Player</th>
-                    <th>Points</th>
-                </tr>
-            </thead>
-            <tbody id="scoreboardBody"></tbody>
-        </table>
-    </div>
-
+    <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
+    <h1 id="lta">LET'S TWIST AGAIN!</h1>
+    
     <audio id="audioA" src="lets_twist_again.mp3"></audio>
     <audio id="audioB" src="countdown.mp3"></audio>
 
@@ -47,6 +36,7 @@
         const countdown = document.getElementById("countdown");
         const turnMessage = document.getElementById("turnMessage");
         const twistGif = document.getElementById("twistGif");
+        const lta = document.getElementById("lta");
 
         function toggleButtons(active) {
             startButton.style.display = (active === "start") ? 'block' : 'none';
@@ -61,6 +51,7 @@
 
         nextButton.addEventListener("click", function () {
             twistGif.style.display = "none";
+            lta.style.display = "none";
             if (currentAudio && !currentAudio.paused) {
                 currentAudio.pause();
                 currentAudio.currentTime = 0; 
@@ -92,6 +83,7 @@
             let twist = random < 0.35;
             currentAudio = document.getElementById(twist ? "audioA" : "audioB");
             twistGif.style.display = twist ? 'block' : 'none';
+            lta.style.display = twist ? 'block' : 'none';
             currentAudio.playbackRate = twist ? 1.05 : 1;
             setTimeout(function() {}, twist ? 1000: 0);
             currentAudio.play();
