--- a/game.html
+++ b/game.html
@@ -9,7 +9,6 @@
 <body>
 
     <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
-    
     <h1 id="turnMessage"></h1>
 
     <div class="button-container">
@@ -21,6 +20,19 @@
         <div id="countdown">20</div>
     </div>
 
+    <div id="scoreboard">
+        <table>
+            <thead>
+                <tr>
+                    <th>Position</th>
+                    <th>Player</th>
+                    <th>Points</th>
+                </tr>
+            </thead>
+            <tbody id="scoreboardBody"></tbody>
+        </table>
+    </div>
+
     <audio id="audioA" src="lets_twist_again.mp3"></audio>
     <audio id="audioB" src="countdown.mp3"></audio>
 
@@ -28,8 +40,10 @@
         let currentAudio = null;
         let countdownInterval = null;
         let countdownValue = 20;
+        const maxPoints = 10;
         let currentPlayerIndex = 0;
         const players = JSON.parse(localStorage.getItem('players'));
+        const playersOrder = [...players];
         const startButton = document.getElementById("startButton");
         const nextButton = document.getElementById("nextButton");
         const countdown = document.getElementById("countdown");
@@ -92,14 +106,12 @@
         }
 
         function updatePlayerTurn() {
-            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
-            const currentPlayer = players[currentPlayerIndex];
+            currentPlayerIndex = (currentPlayerIndex + 1) % playersOrder.length;
+            const currentPlayer = playersOrder[currentPlayerIndex];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
         }
 
-        turnMessage.textContent = `${player[0].name}, IT'S YOUR TURN!`;
-        turnMessage.style.color = players[0].color;
     </script>
 
 </body>
