--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 <body>
 
     <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
+    <h1 id="lta" style="display:none">LET'S TWIST AGAIN!</h1>
     <h1 id="turnMessage"></h1>
 
     <div class="button-container">
@@ -49,6 +50,7 @@
         const countdown = document.getElementById("countdown");
         const turnMessage = document.getElementById("turnMessage");
         const twistGif = document.getElementById("twistGif");
+        const LTA = document.getElementById("LTA");
 
         function toggleButtons(active) {
             startButton.style.display = (active === "start") ? 'block' : 'none';
@@ -63,6 +65,7 @@
 
         nextButton.addEventListener("click", function () {
             twistGif.style.display = "none";
+            lta.style.display = "none";
             if (currentAudio && !currentAudio.paused) {
                 currentAudio.pause();
                 currentAudio.currentTime = 0; 
@@ -94,6 +97,7 @@
             let twist = random < 0.35;
             currentAudio = document.getElementById(twist ? "audioA" : "audioB");
             twistGif.style.display = twist ? 'block' : 'none';
+            lta.style.display = twist ? 'block' : 'none';
             currentAudio.playbackRate = twist ? 1.05 : 1;
             setTimeout(function() {}, twist ? 1000: 0);
             currentAudio.play();
