--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
         const countdown = document.getElementById("countdown");
         const turnMessage = document.getElementById("turnMessage");
         const twistGif = document.getElementById("twistGif");
-        const LTA = document.getElementById("LTA");
+        const lta = document.getElementById("LTA");
 
         function toggleButtons(active) {
             startButton.style.display = (active === "start") ? 'block' : 'none';
