--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 <body>
 
     <img id="twistGif" src="twist.gif" alt="Twist GIF" style="display:none">
-    <h1 id="lta" style="display:none">LET'S TWIST AGAIN!</h1>
+    <h1 id="lta" style="display:none; color:red">LET'S TWIST AGAIN!</h1>
     <h1 id="turnMessage"></h1>
 
     <div class="button-container">
