--- a/game.html
+++ b/game.html
@@ -103,7 +103,8 @@
         }
 
         function updatePlayerTurn() {
-            const currentPlayer = players[currentPlayerIndex];
+            
+            const currentPlayer = players[currentPlayerIndex % players.length];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
             currentPlayerIndex++;
