--- a/game.html
+++ b/game.html
@@ -103,8 +103,8 @@
         }
 
         function updatePlayerTurn() {
-            
-            const currentPlayer = players[currentPlayerIndex % players.length];
+            let currentPlayerIndex = currentPlayerIndex % players.length
+            const currentPlayer = players[currentPlayerIndex];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
             currentPlayerIndex++;
