--- a/game.html
+++ b/game.html
@@ -103,7 +103,7 @@
         }
 
         function updatePlayerTurn() {
-            let currentPlayerIndex = currentPlayerIndex % players.length
+            let currentPlayerIndex = currentPlayerIndex % players.length;
             const currentPlayer = players[currentPlayerIndex];
             turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
             turnMessage.style.color = currentPlayer.color;
